// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-graph-editor/PolyLineSVG with points 1`] = `
.emotion-0 {
  fill: none;
  stroke: #000;
  stroke-width: 2px;
}

<PolyLineSVG
  className="emotion-0 emotion-1"
  points={
    Array [
      Array [
        320,
        320,
      ],
      Array [
        480,
        0,
      ],
      Array [
        1280,
        1160,
      ],
    ]
  }
/>
`;

exports[`react-graph-editor/PolyLineSVG with theme 1`] = `
<StyledPolyLineSVG
  points={
    Array [
      Array [
        320,
        320,
      ],
      Array [
        480,
        0,
      ],
      Array [
        1280,
        1160,
      ],
    ]
  }
/>
`;
